--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+
+body {
+  background: #C7EFCF;
+  font-family: 'Roboto', sans-serif;
+}
+
+#logo {
+  display: block;
+  margin: 0px auto;
+}
